--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.2",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0",
     "tsyringe": "^4.6.0",
